--- a/web con plantilla final/index.html
+++ b/web con plantilla final/index.html
@@ -167,18 +167,18 @@
                                         </li>
                                         <li>
                                             <a href="blog.html#anulacion"> <img src="fotos/noticiapeque.jpg" class="pull-left" alt="Foto de la noticia" /></a>
-                                            <h6><a href="blog.html#anulacion">Anulación de la unidad multidisciplinar de Wolfram</a><h6>
+                                            <h6><a href="blog.html#anulacion">Anulación de la unidad multidisciplinar de Wolfram</a></h6>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
-                          
-                         </div>
+
                         </div>
-                    </div>    
-               </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        
+
         <footer>
             <div class="container">
                 <div class="row">
