--- a/web con plantilla final/users.html
+++ b/web con plantilla final/users.html
@@ -47,7 +47,7 @@
                             <li><a href="proyects.html">Proyectos </a></li>
                             <li><a href="blog.html">Noticias </a></li>
                             <li><a href="contact.html">Contacto </a></li>
-                            <li><a href="about.html">Sobre nosotros </a></li>
+                            <li><a href="about.html">Sobre sus desarrolladores </a></li>
                             <li class="dropdown active">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-center">
-                            <nav class="navbar navbar-default" role="navigation">
+                            <nav class="navbar navbar-default" role="navigation" id="navBarModified">
                                 <div class="navbar-header">
                                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                                         <span class="sr-only">Desplegar navegación</span>
@@ -217,13 +217,12 @@
                 <div class="row">
                     <div class="col-sm-3 col-lg-3">
                         <div class="widget">
-                            <h4>Get in touch with us</h4>
+                            <h4>Estamos en: </h4>
                             <address>
-					<strong>Sailor company Inc</strong><br>
-					 Sailor suite room V124, DB 91<br>
-					 Someplace 71745 Earth </address>
+					<strong>Asociación Española para la Investigación y Ayuda al Síndrome de Wolfram</strong><br>
+					 C/ Picadilly, nº 7, Almería, Andalucía</address>
                             <p>
-                                <i class="icon-phone"></i> (123) 456-7890 - (123) 555-7891
+                                <i class="icon-phone"></i>653 115 307
                                 <br>
                                 <i class="icon-envelope-alt"></i> email@domainname.com
                             </p>
@@ -231,43 +230,42 @@
                     </div>
                     <div class="col-sm-3 col-lg-3">
                         <div class="widget">
-                            <h4>Information</h4>
+                            <h4>Información</h4>
                             <ul class="link-list">
-                                <li><a href="#">Press release</a></li>
-                                <li><a href="#">Terms and conditions</a></li>
-                                <li><a href="#">Privacy policy</a></li>
-                                <li><a href="#">Career center</a></li>
-                                <li><a href="#">Contact us</a></li>
+                                <li><a href="#">Términos y condiciones</a></li>
+                                <li><a href="#">Política de privacidad</a></li>
+                                <li><a href="contact.html">Contáctanos</a></li>
                             </ul>
                         </div>
 
                     </div>
                     <div class="col-sm-3 col-lg-3">
                         <div class="widget">
-                            <h4>Pages</h4>
+                            <h4>Páginas relacionadas</h4>
                             <ul class="link-list">
-                                <li><a href="#">Press release</a></li>
-                                <li><a href="#">Terms and conditions</a></li>
-                                <li><a href="#">Privacy policy</a></li>
-                                <li><a href="#">Career center</a></li>
-                                <li><a href="#">Contact us</a></li>
+                                <li><a href="http://www.orpha.net/consor/cgi-bin/OC_Exp.php?lng=ES&Expert=3463.0">ORPHANET – Síndrome de Wolfram</a></li>
+                                <li><a href="http://www.association-du-syndrome-de-wolfram.org/faire-un-don.html">Asociación Francesa del síndrome de Wolfram</a></li>
+                                <li><a href="http://wolframsyndrome.dom.wustl.edu/">Universidad de Washington en St. Louis – Síndrome de Wolfram</a></li>
+                                <li><a href="http://aswolfram.org/">Asociación Española para la Investigación y Ayuda al síndrome de Wolfram</a></li>
+                                <li><a href="http://www.eurordis.org/es/content/un-nuevo-registro-para-las-diabetes-raras">EURORDIS – Un nuevo registro para las diabetes raras</a></li>
+                                <li><a href="http://www.euro-wabb.org/es/">EURO-WABB</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-sm-3 col-lg-3">
                         <div class="widget">
-                            <h4>Newsletter</h4>
-                            <p>Fill your email and sign up for monthly newsletter to keep updated</p>
-                            <div class="form-group multiple-form-group input-group">
-                                <input type="email" name="email" class="form-control">
-                                <span class="input-group-btn">
+                            <h4>Idioma</h4>
+                            <!--   <div class="form-group multiple-form-group input-group">
+                        <input type="email" name="email" class="form-control">
+                        <span class="input-group-btn">
                             <button type="button" class="btn btn-theme btn-add">Subscribe</button>
                         </span>
-                            </div>
+                    </div>  -->
                         </div>
                     </div>
                 </div>
             </div>
+
             <div id="sub-footer">
                 <div class="container">
                     <div class="row">
@@ -275,24 +273,10 @@
                             <div class="copyright">
                                 <p>&copy; Sailor Theme - All Right Reserved</p>
                                 <div class="credits">
-                                    <!-- 
-                                All the links in the footer should remain intact. 
-                                You can delete the links only if you purchased the pro version.
-                                Licensing information: https://bootstrapmade.com/license/
-                                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Sailor
-                            -->
+
                                     <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <ul class="social-network">
-                                <li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-                                <li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
-                            </ul>
                         </div>
                     </div>
                 </div>
