Last Design change

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
 
 
             <div class="col-lg-4  col-xs-offset-0 ">
-                <h3><font color="white">¿Tienes alguna duda?<br><h4><font color="white">Chat</font></h4></font></h3>
+                <h3><font color="white">¿Tienes alguna duda?</font><br><h4><font color="white">Chat</font></h4></h3>
                 <hr class="colorgraph">
      <!--           <div id="sendmessage">Your message has been sent. Thank you!</div>
                 <div id="errormessage"></div>
