--- a/Bootstrap-Admin-Theme/mycomments.html
+++ b/Bootstrap-Admin-Theme/mycomments.html
@@ -2,7 +2,7 @@
 <html data-brackets-id='575'>
 
 <head data-brackets-id='576'>
-    <title data-brackets-id='577'>Bootstrap Admin Theme v3</title>
+    <title data-brackets-id='577'>Admin WAD Wolfram - Mensajes</title>
     <meta data-brackets-id='578' name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- jQuery UI -->
     <link data-brackets-id='579' href="https://code.jquery.com/ui/1.10.3/themes/redmond/jquery-ui.css" rel="stylesheet" media="screen">
@@ -66,10 +66,11 @@
                 <div data-brackets-id='605' class="sidebar content-box " style="display: block; ">
                     <ul data-brackets-id='606' class="nav ">
                         <!-- Main menu -->
-                        <li data-brackets-id='607'><a data-brackets-id='608' href="index.html "><i data-brackets-id='609' class="glyphicon glyphicon-home "></i> Inicio</a></li>
-                        <li data-brackets-id='610'><a data-brackets-id='611' href="addproject.html "><i data-brackets-id='612' class="glyphicon glyphicon-pencil "></i> Añadir Proyecto</a></li>
-                        <li data-brackets-id='613'><a data-brackets-id='614' href="addblog.html "><i data-brackets-id='615' class="glyphicon glyphicon-tasks "></i> Añadir Noticia</a></li>
-                        <li data-brackets-id='616' class="current"><a data-brackets-id='617' href="mycomments.html "><i data-brackets-id='618' class="glyphicon glyphicon-list "></i> Mis comentarios</a></li>
+                        <li><a href="index.html "><i class="glyphicon glyphicon-home "></i> Inicio</a></li>
+                        <li><a href="addproject.html "><i class="glyphicon glyphicon-pencil "></i> Añadir Proyecto</a></li>
+                        <li><a href="donations.html "><i class="glyphicon glyphicon-euro"></i> Donaciones</a></li>
+                        <li><a href="addblog.html "><i class="glyphicon glyphicon-tasks "></i> Añadir Noticia</a></li>
+                        <li class="current"><a href="mycomments.html "><i class="glyphicon glyphicon-list "></i> Mis mensajes</a></li>
                         <li data-brackets-id='619' class="submenu ">
                             <a data-brackets-id='620' href="# ">
                                 <i data-brackets-id='621' class="glyphicon glyphicon-record "></i> Mi cuenta
