--- a/Bootstrap-Admin-Theme/profile.html
+++ b/Bootstrap-Admin-Theme/profile.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Bootstrap Admin Theme v3</title>
+    <title>Admin WAD Wolfram - Perfil</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- jQuery UI -->
     <link href="https://code.jquery.com/ui/1.10.3/themes/redmond/jquery-ui.css" rel="stylesheet" media="screen">
@@ -68,8 +68,9 @@
                         <!-- Main menu -->
                         <li><a href="index.html "><i class="glyphicon glyphicon-home "></i> Inicio</a></li>
                         <li><a href="addproject.html "><i class="glyphicon glyphicon-pencil "></i> Añadir Proyecto</a></li>
+                        <li><a href="donations.html "><i class="glyphicon glyphicon-euro"></i> Donaciones</a></li>
                         <li><a href="addblog.html "><i class="glyphicon glyphicon-tasks "></i> Añadir Noticia</a></li>
-                        <li><a href="mycomments.html "><i class="glyphicon glyphicon-list "></i> Mis comentarios</a></li>
+                        <li><a href="mycomments.html "><i class="glyphicon glyphicon-list "></i> Mis mensajes</a></li>
                         <li class="submenu current">
                             <a href="# ">
                                 <i class="glyphicon glyphicon-record "></i> Mi cuenta
