--- a/Bootstrap-Admin-Theme/addblog.html
+++ b/Bootstrap-Admin-Theme/addblog.html
@@ -71,7 +71,6 @@
                         <li><a href="addproject.html "><i class="glyphicon glyphicon-pencil "></i> Añadir Proyecto</a></li>
                         <li><a href="donations.html "><i class="glyphicon glyphicon-euro"></i> Donaciones</a></li>
                         <li class="current"><a href="addblog.html "><i class="glyphicon glyphicon-tasks "></i> Añadir Noticia</a></li>
-                        <li><a href="mycomments.html "><i class="glyphicon glyphicon-list "></i> Mis mensajes</a></li>
                         <li class="submenu ">
                             <a href="# ">
                                 <i class="glyphicon glyphicon-record "></i> Mi cuenta
@@ -105,6 +104,12 @@
                                         <label for="inputEmail3" class="col-sm-2 control-label">Título de la noticia</label>
                                         <div class="col-sm-10">
                                             <input type="text" class="form-control" id="inputEmail3" placeholder="Título">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="inputEmail3" class="col-sm-2 control-label">Categoría</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" id="inputEmail3" placeholder="Categoría">
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -144,6 +149,62 @@
                                         </div>
                                     </div>
                                 </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="content-box-large">
+                            <div class="panel-heading">
+                                <div class="panel-title">Todas las noticias</div>
+                                <div class="panel-options">
+                                    <a href="#" data-rel="collapse"><i class="glyphicon glyphicon-refresh"></i></a>
+                                    <a href="#" data-rel="reload"><i class="glyphicon glyphicon-cog"></i></a>
+                                </div>
+                            </div>
+                            <div class="panel-body">
+                                <div class="table-responsive">
+                                    <table class="table">
+                                        <thead>
+                                            <tr>
+                                                <th>Título de la noticia</th>
+                                                <th>Fecha de publicación</th>
+                                                <th>Categoría</th>
+                                                <th>Acción</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>1</td>
+                                                <td>Mark</td>
+                                                <td>Otto</td>
+                                                <td>
+                                                    <button class="btn btn-primary"><i class="glyphicon glyphicon-pencil"></i> Editar</button>
+                                                    <button class="btn btn-danger"><i class="glyphicon glyphicon-remove"></i> Borrar</button>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>2</td>
+                                                <td>Jacob</td>
+                                                <td>Thornton</td>
+                                                <td>
+                                                    <button class="btn btn-primary"><i class="glyphicon glyphicon-pencil"></i> Editar</button>
+                                                    <button class="btn btn-danger"><i class="glyphicon glyphicon-remove"></i> Borrar</button>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>3</td>
+                                                <td>Larry</td>
+                                                <td>the Bird</td>
+                                                <td>
+                                                    <button class="btn btn-primary"><i class="glyphicon glyphicon-pencil"></i> Editar</button>
+                                                    <button class="btn btn-danger"><i class="glyphicon glyphicon-remove"></i> Borrar</button>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
