Add page of pay
Add page to realice the contribution for a project

--- a/users.html
+++ b/users.html
@@ -100,6 +100,7 @@
                                             <li class="list-group-item">
                                                 <H3><a href="oneProyect.html">Título Proyecto 1</a></H3>
                                                 <p>Descrpción breve</p>
+                                                <p>Dinero aportado</p>
                                             </li>
                                             <li class="list-group-item">
                                                 <H3><a href="">Título Proyecto 2</a></H3>
@@ -108,10 +109,12 @@
                                             <li class="list-group-item">
                                                 <H3><a href="">Título Proyecto 3</a></H3>
                                                 <p>Descrpción breve</p>
+                                                <p>Dinero aportado</p>
                                             </li>
                                             <li class="list-group-item">
                                                 <H3><a href="">Título Proyecto 4</a></H3>
                                                 <p>Descrpción breve</p>
+                                                <p>Dinero aportado</p>
                                             </li>
                                         </ul>
                                     </div>
@@ -121,6 +124,7 @@
                                             <li class="list-group-item">
                                                 <H3><a href="">Título Proyecto 5</a></H3>
                                                 <p>Descrpción breve</p>
+
                                             </li>
                                             <li class="list-group-item">
                                                 <H3><a href="">Título Proyecto 6</a></H3>
